# stateful-streaming-examples

./: .gitignore  LICENSE.md  README.md  pyproject.toml
bytewax/: iot.py  requirements.txt  running_average.py  running_average_flat_map.py  running_average_reduce_window.py
flink/: iot.py  requirements.txt  running_average.py
kafka/: consume.py  create_topic.py  docker-compose.yml  produce.py  requirements.txt
spark/: iot.py  requirements.txt
src/softlandia/stateful_streaming/: dependencies.py
